[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
warp-reverse-proxy = "0.5"
static_dir = "0.2.0"
